# advent-of-code-2024

./: .gitignore  Cargo.toml  README.md  justfile
day-01/: Cargo.toml
day-01/benches/: benchmark.rs
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/benches/: benchmark.rs
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml
day-03/benches/: benchmark.rs
day-03/src/: part1.rs  part2.rs
day-03/template/: Cargo.toml
day-03/template/src/: part1.rs
day-04/: Cargo.toml
day-04/benches/: benchmark.rs
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml
day-05/benches/: benchmark.rs
day-05/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-06/benches/: benchmark.rs
day-06/src/: part1.rs  part2.rs
day-07/: Cargo.toml
day-07/benches/: benchmark.rs
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/benches/: benchmark.rs
day-08/src/: part1.rs  part2.rs
day-09/: Cargo.toml
day-09/benches/: benchmark.rs
day-09/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/benches/: benchmark.rs
day-10/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/benches/: benchmark.rs
day-11/src/: lib.rs  part1.rs  part1_vecdeque.rs  part2.rs
day-12/: Cargo.toml
day-12/benches/: benchmark.rs
day-12/src/: part1.rs  part2.rs
day-13/: Cargo.toml
day-13/benches/: benchmark.rs
day-13/src/: part1.rs  part2.rs
day-14/: Cargo.toml
day-14/benches/: benchmark.rs
day-14/src/: part1.rs
day-15/: Cargo.toml
day-15/benches/: benchmark.rs
day-15/src/: part1.rs  part2.rs
day-16/: Cargo.toml
day-16/benches/: benchmark.rs
day-16/src/: lib.rs  part1.rs  part2.rs  part2_pathfinding.rs
day-17/: Cargo.toml
day-17/benches/: benchmark.rs
day-17/src/: part1.rs  part2.rs
day-18/: Cargo.toml
day-18/benches/: benchmark.rs
day-18/src/: part1.rs  part2.rs
day-19/: Cargo.toml
day-19/benches/: benchmark.rs
day-19/src/: lib.rs  part1.rs  part2.rs  trie.rs
day-20/: Cargo.toml
day-20/benches/: benchmark.rs
day-20/src/: part1.rs  part2.rs
day-21/: Cargo.toml
day-21/benches/: benchmark.rs
day-21/src/: part1.rs  part2.rs
day-22/: Cargo.toml
day-22/benches/: benchmark.rs
day-22/src/: part1.rs  part2.rs
day-23/: Cargo.toml
day-23/benches/: benchmark.rs
day-23/src/: part1.rs  part2.rs
day-24/: Cargo.toml
day-24/benches/: benchmark.rs
day-24/src/: part1.rs  part2.rs
day-25/: Cargo.toml
day-25/benches/: benchmark.rs
day-25/src/: part1.rs
grid/: Cargo.toml
grid/benches/: benchmark.rs
grid/src/: direction.rs  grid.rs  lib.rs  vec2.rs
src/: main.rs
template/: Cargo.toml
template/src/: part2.rs
