[workspace]
members = ["day-*", "template", "grid"]

[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.21", features = ["derive"] }
day-01 = { version = "0.1.0", path = "day-01" }
day-02 = { version = "0.1.0", path = "day-02" }
day-03 = { version = "0.1.0", path = "day-03" }
day-04 = { version = "0.1.0", path = "day-04" }
day-05 = { version = "0.1.0", path = "day-05" }
dhat = "0.3.3"
nom = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[workspace.dependencies]
divan = "0.1.16"
grid = { version = "0.1.0", path = "grid" }
nom = "7.1.3"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.dhat]
inherits = "release"
debug = 1

[profile.bench]
lto = "thin"

[features]
dhat-heap = []
