[workspace]
members = ["day-*", "template", "grid"]

[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
day-01 = { version = "0.1.0", path = "day-01" }
day-02 = { version = "0.1.0", path = "day-02" }
day-03 = { version = "0.1.0", path = "day-03" }
day-04 = { version = "0.1.0", path = "day-04" }
day-05 = { version = "0.1.0", path = "day-05" }
day-06 = { version = "0.1.0", path = "day-06" }
day-07 = { version = "0.1.0", path = "day-07" }
dhat = "0.3.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[workspace.dependencies]
divan = "0.1.17"
grid = { version = "0.1.0", path = "grid" }
glam = "0.29.2"
itertools = "0.13.0"
nom = "7.1.3"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.dhat]
inherits = "release"
debug = 1

[profile.bench]
lto = "thin"

[features]
dhat-heap = []
